kubernetes/prod/us-west-2/monitoring/nginx-ingress.controller.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-ingress-controller","namespace":"monitoring"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"ingress-nginx","k8s-app":"ingress-nginx"}},"template":{"metadata":{"labels":{"app":"ingress-nginx","k8s-app":"ingress-nginx"}},"spec":{"containers":[{"args":["/nginx-ingress-controller","--ingress-class=nginx-monitoring","--watch-namespace=monitoring","--configmap=$(POD_NAMESPACE)/nginx-configuration","-- [...]
  creationTimestamp: "2019-05-20T12:41:15Z"
  generation: 2
  name: nginx-ingress-controller
  namespace: monitoring
  resourceVersion: "594826944"
  uid: 8e7431ca-7afc-11e9-be09-0a6aa30f6294
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingress-nginx
      k8s-app: ingress-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingress-nginx
        k8s-app: ingress-nginx
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --ingress-class=nginx-monitoring
        - --watch-namespace=monitoring
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        - --publish-service=$(POD_NAMESPACE)/ingress-nginx
        - --annotations-prefix=nginx.ingress.kubernetes.io
        - --validating-webhook=:8443 
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key
        image: bitnami/nginx-ingress-controller:1.6.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          procMount: Default
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: nginx-ingress-serviceaccount
      serviceAccountName: nginx-ingress-serviceaccount
      terminationGracePeriodSeconds: 30
