kubernetes/prod/us-west-2/monitoring/14-prometheus-object.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prometheus-general
  name: prometheus-general
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app: prometheus
    prometheus: prometheus-general
