kubernetes/prod/us-west-2/monitoring/25-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana:7.0.3
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-persistent-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-worker-nodes
          name: grafana-dashboard-k8s-worker-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-cluster-overview
          name: grafana-dashboard-k8s-cluster-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-deployments
          name: grafana-dashboard-k8s-deployments
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-pod-detailed
          name: grafana-dashboard-k8s-pod-detailed
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nginx-ingress-controller
          name: grafana-dashboard-nginx-ingress-controller
          readOnly: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
      serviceAccountName: grafana
      volumes:
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-persistent-storage
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - configMap:
          name: grafana-dashboard-k8s-worker-nodes
        name: grafana-dashboard-k8s-worker-nodes
      - configMap:
          name: grafana-dashboard-k8s-deployments
        name: grafana-dashboard-k8s-deployments
      - configMap:
          name: grafana-dashboard-k8s-pod-detailed
        name: grafana-dashboard-k8s-pod-detailed
      - configMap:
          name: grafana-dashboard-k8s-cluster-overview
        name: grafana-dashboard-k8s-cluster-overview
      - configMap:
          name: grafana-dashboard-nginx-ingress-controller
        name: grafana-dashboard-nginx-ingress-controller

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: grafana
