kubernetes/prod/us-west-2/monitoring/30-coredns-service-monitor.yml
kind: Service
apiVersion: v1
metadata:
  namespace: kube-system
  name: coredns-prometheus-discovery
  labels:
    k8s-app: coredns-service
spec:
  selector:
    k8s-app: kube-dns
  type: ClusterIP
  clusterIP: None    
  ports:
  - name: metrics
    port: 9153
    protocol: TCP
